Finished making a download button style. Aligned it correctly. Have to make sure it works with JS in future.

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body
 {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 .title
@@ -9,5 +10,44 @@ body
     font-family: cursive;
     font-weight: bolder;
     padding-top: 10px;
-    font-size: larger;
+    font-size: 30px;
+    background-color: peachpuff;
+    color: royalblue;
 }
+
+.menu_container
+{
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.container_for_download
+{
+    display: flex;
+    width: 100%;
+    height: auto;
+    justify-content: flex-end;
+}
+
+.download-button
+{
+    display: flex;
+    width: 356px;
+    height: 106px;
+    background-color: lightskyblue;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    font-size: large;
+    border-radius: 25px;
+    margin-right: 25px;
+    margin-bottom: 75px;
+}
+
+/* button.download-button:hover
+{
+
+} */
